# VCFX

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Makefile  compile_wasm.sh  index.html  sitemap.xml
CONTRIBUTING/: index.html
LICENSE/: index.html
VCFX_af_subsetter/: index.html
VCFX_alignment_checker/: index.html
VCFX_allele_balance_calc/: index.html
VCFX_allele_balance_filter/: index.html
VCFX_allele_counter/: index.html
VCFX_allele_freq_calc/: index.html
VCFX_ancestry_assigner/: index.html
VCFX_ancestry_inferrer/: index.html
VCFX_annotation_extractor/: index.html
VCFX_compressor/: index.html
VCFX_concordance_checker/: index.html
VCFX_cross_sample_concordance/: index.html
VCFX_custom_annotator/: index.html
VCFX_diff_tool/: index.html
VCFX_distance_calculator/: index.html
VCFX_dosage_calculator/: index.html
VCFX_duplicate_remover/: index.html
VCFX_fasta_converter/: index.html
VCFX_field_extractor/: index.html
VCFX_file_splitter/: index.html
VCFX_format_converter/: index.html
VCFX_genotype_query/: index.html
VCFX_gl_filter/: index.html
VCFX_haplotype_extractor/: index.html
VCFX_haplotype_phaser/: index.html
VCFX_header_parser/: index.html
VCFX_hwe_tester/: index.html
VCFX_impact_filter/: index.html
VCFX_inbreeding_calculator/: index.html
VCFX_indel_normalizer/: index.html
VCFX_indexer/: index.html
VCFX_info_aggregator/: index.html
VCFX_info_parser/: index.html
VCFX_info_summarizer/: index.html
VCFX_ld_calculator/: index.html
src/VCFX_compressor/: CMakeLists.txt
(+34 files in other folders)
